# au_vm_flattened

./: .gitignore  CMakeLists.txt  lastBytecode.txt  main.cpp
include/: mathvm.h
my_include/: ast_printer_translator.h  ast_printer_visitor.h  astprinter.h  bytecode_translator_visitor.h  code_impl.h  dynamic_loader.h  includes.h  insn_factory.h  interpreter.h  native_caller.h  scope.h  stack_frame.h
my_vm/: ast_printer_translator.cpp  ast_printer_visitor.cpp  bytecode_translator.cpp  bytecode_translator_visitor.cpp  code_impl.cpp  interpreter.cpp  translator_impl.cpp
test/: casts.mvm  freetest.mvm  function_native_simple.mvm  run.py  simple_complex.mvm
